objects/EntitlementSelectorList__c.object
<CustomObject>
    <description>ESC_ Custom object that allows custom entitlement selection criteria for each LOB</description>
    <fields>
        <fullName>ESC_Case_Field1__c</fullName>
        <label>Case Field1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Field2__c</fullName>
        <label>Case Field2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Field3__c</fullName>
        <label>Case Field3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Entitlement_Name__c</fullName>
        <label>Entitlement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Entitlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entitlement</label>
        <referenceTo>Entitlement</referenceTo>
        <relationshipLabel>EntitlementSelectorList</relationshipLabel>
        <relationshipName>EntitlementSelectorList</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESC_LKP__c</fullName>
        <formula>ESC_Profile_Name__c + ESC_Case_Field1__c + ESC_Case_Field2__c+ESC_Case_Field3__c+ESC_Case_Field4__c+ESC_Case_Field5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LKP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>EntitlementSelectorList</label>
    <nameField>
        <displayFormat>ENSL-{00000000}</displayFormat>
        <label>EntitlementSelectorList Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EntitlementSelectorList</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>